# tensorrt_demos_ros

./: CMakeLists.txt  README.md  package.xml  pycuda.autoinit  trt_calibration.py  trt_yolo_ros.py
module/: px2world.py
utils/: camera.py  visualization.py  yolo_classes.py  yolo_with_plugins.py
yolo/: plugins.py
